# people-detection

./: .gitignore  CONTRIBUTION.md  README.md  pyproject.toml
notebooks/: data-augmentation.ipynb  dl-explore-models-wrong.ipynb  yolo_11n_tests.ipynb  yolo_comparison.ipynb
real-time-people-detection/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
real-time-people-detection/app/: __init__.py  streamlit_app.py
real-time-people-detection/app/detection/: __init__.py  model.py
real-time-people-detection/app/utils/: __init__.py  video.py
real-time-people-detection/tests/: __init__.py  test_app.py  test_detection.py  test_video.py
